--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,15 @@ server:
 
 spring: 
   datasource:
-    url: jdbc:mysql://localhost:3306/shiro?useSSL=true
+    url: jdbc:mysql://39.106.130.199:3306/shiro?useSSL=true
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
+  freemarker: 
+    cache: false
+    charset: UTF-8
+    check-template-location: true
+    content-type: text/html
+    enabled: true
+    suffix: .html
